minor alignment issue on blog home

--- a/wp-content/themes/fifth-third/css/screen.css
+++ b/wp-content/themes/fifth-third/css/screen.css
@@ -634,7 +634,7 @@ h2 {
 }
 /* line 9, ../sass/includes/_blog.scss */
 .blog .left {
-  width: 650px;
+  width: 662px;
   height: 395px;
   padding: 40px 0px 70px 0px;
   margin-bottom: 110px;
@@ -642,7 +642,7 @@ h2 {
 }
 /* line 16, ../sass/includes/_blog.scss */
 .blog .right {
-  width: 350px;
+  width: 338px;
   position: relative;
   background: none;
 }
