--- a/wp-content/themes/fifth-third/sass/includes/_blog.scss
+++ b/wp-content/themes/fifth-third/sass/includes/_blog.scss
@@ -7,14 +7,14 @@
     background-position: top center;
   }
   .left {
-    width: 650px;
+    width: 662px;
     height: 395px;
     padding: 40px 0px 70px 0px;
     margin-bottom: 110px;
     background: none;
   }
   .right {
-    width: 350px;
+    width: 338px;
     position: relative;
     background: none;
 
